backend and frontend done

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -230,15 +230,12 @@
     <div class="loading-screen">
         <div class="loading-text">Loading Universe...</div>
     </div>
-    <div class="nav">
-        <button class="nav-btn" onclick="scrollToSection('about')">About</button>
-        <button class="nav-btn" onclick="scrollToSection('features')">Features</button>
-        <button class="nav-btn" onclick="scrollToSection('contact')">Contact</button>
-    </div>
+  
     <div class="content section" id="home">
         <h1 class="title">CHANDRA</h1>
-        <p class="subtitle">Explore the cosmic frontier</p>
-        <button class="explore-btn" onclick="scrollToSection('about')">Begin Journey</button>
+        <p class="subtitle">Critical Hyperspectral Analysis of Naturally Dark Remote Craters</p>
+        <button class="explore-btn" onclick="location.href='upload.html'">Begin Journey</button>
+
     </div>
     <div class="content section about" id="about">
         <h2>About Project Chandra</h2>
@@ -265,11 +262,7 @@
                 <p>Conducting groundbreaking research to understand the cosmos better.</p>
             </div>
         </div>
-        <div class="gallery">
-            <img src="https://via.placeholder.com/200" alt="Feature 1">
-            <img src="https://via.placeholder.com/200" alt="Feature 2">
-            <img src="https://via.placeholder.com/200" alt="Feature 3">
-        </div>
+      
     </div>
     <div class="content section contact" id="contact">
         <h2>Contact Us</h2>
